--- a/posts/templates/posts/post_list.html
+++ b/posts/templates/posts/post_list.html
@@ -71,7 +71,12 @@
             <td class="text-center">
                 <ul class="table-controls">
                     <li><a href="javascript:void(0);"  data-toggle="tooltip" data-placement="top" title="Edit"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-check-circle text-primary"><path d="M22 11.08V12a10 10 0 1 1-5.93-9.14"></path><polyline points="22 4 12 14.01 9 11.01"></polyline></svg></a></li>
-                    <li><a href="javascript:void(0);" data-toggle="tooltip" data-placement="top" title="Delete"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-x-circle text-danger"><circle cx="12" cy="12" r="10"></circle><line x1="15" y1="9" x2="9" y2="15"></line><line x1="9" y1="9" x2="15" y2="15"></line></svg></a></li>
+                    <li><a href="#" data-toggle="modal" 
+                        data-target='#delete-post'
+                        data-id="{{post.id}}"
+                        data-title="{{post.title}}"
+                        
+                        data-placement="top" title="Delete"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-x-circle text-danger"><circle cx="12" cy="12" r="10"></circle><line x1="15" y1="9" x2="9" y2="15"></line><line x1="9" y1="9" x2="15" y2="15"></line></svg></a></li>
                 </ul>
             </td>
         </tr>
@@ -153,11 +158,59 @@
         </div>
     </div>
 </div>
+
+<div id="delete-post" class="modal animated slideInUp custo-slideInUp" role="dialog">
+    <div class="modal-dialog">
+        <!-- Modal content-->
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Delete Post</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-x"><line x1="18" y1="6" x2="6" y2="18"></line><line x1="6" y1="6" x2="18" y2="18"></line></svg>
+                </button>
+            </div>
+            <div class="modal-body">
+              <p class="modal-text">? Are You Sure Delete this Post</p>
+              <form action="{% url 'posts:delete-post' %}" method="post">
+                {% csrf_token %}
+                <input id="title" type="text" name="title" class="form-control" required>
+                <input id="id" type="hidden" name="id"  class="form-control" required >
+
+
+
+                <div class="modal-footer md-button">
+                    <button class="btn" data-dismiss="modal"><i class="flaticon-cancel-12"></i> Discard</button>
+                    <button type="submit" class="btn btn-primary">حذف المنشور</button>
+                </div>
+              </form>
+
+            </div>
+           
+        </div>
+    </div>
+</div>
     
 {% endblock body %}
 
 
 {% block js %}
+
+<script src="http://code.jquery.com/jquery-1.11.0.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+
+<script>
+    $('#delete-post').on('show.bs.modal', function(event) {
+            var button = $(event.relatedTarget)
+            var id = button.data('id')
+            var title = button.data('title')
+          
+            
+            var modal = $(this)
+            modal.find('.modal-body #id').val(id);
+            modal.find('.modal-body #title').val(title);
+            
+        
+        });
+</script>
     
 {% endblock js %}
     
