--- a/posts/templates/posts/post_list.html
+++ b/posts/templates/posts/post_list.html
@@ -70,8 +70,18 @@
             <td>{{post.publish_date}}</td>
             <td class="text-center">
                 <ul class="table-controls">
-                    <li><a href="javascript:void(0);"  data-toggle="tooltip" data-placement="top" title="Edit"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-check-circle text-primary"><path d="M22 11.08V12a10 10 0 1 1-5.93-9.14"></path><polyline points="22 4 12 14.01 9 11.01"></polyline></svg></a></li>
-                    <li><a href="#" data-toggle="modal" 
+                    <li><a href="#"  data-toggle="modal" data-target="#edit-post"
+                        data-id="{{post.id}}"
+                        data-title="{{post.title}}"
+                        data-content="{{post.content}}"
+                        data-draft="{{post.draft}}"
+                        data-category="{{post.category_id}}"
+
+                        
+                        data-placement="top" title="Edit"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-check-circle text-primary"><path d="M22 11.08V12a10 10 0 1 1-5.93-9.14"></path><polyline points="22 4 12 14.01 9 11.01"></polyline></svg></a></li>
+                    
+                    
+                        <li><a href="#" data-toggle="modal" 
                         data-target='#delete-post'
                         data-id="{{post.id}}"
                         data-title="{{post.title}}"
@@ -189,6 +199,84 @@
         </div>
     </div>
 </div>
+
+<div id="edit-post" class="modal animated slideInUp custo-slideInUp" role="dialog">
+    <div class="modal-dialog">
+        <!-- Modal content-->
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">تعديل المنشور</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-x"><line x1="18" y1="6" x2="6" y2="18"></line><line x1="6" y1="6" x2="18" y2="18"></line></svg>
+                </button>
+            </div>
+            <div class="modal-body">
+                <form action="{% url 'posts:edit-post' %}" method="post" enctype="multipart/form-data">
+                    {% csrf_token %}
+
+                    <div class="form-group">
+                        
+                       
+                        <input id="id" type="hidden" name="id"  class="form-control" required>
+                        
+                    </div>
+
+                    <div class="form-group">
+                        
+                        <label>العنوان</label>
+                        <input id="title" type="text" name="title"  class="form-control" required>
+                        
+                    </div>
+                    <div class="form-group">
+                        
+                        <label>المحتوى</label>
+                        <input id="post_content" type="text" name="content"  class="form-control" required>
+                     
+                    </div>
+                  
+
+                    <div class="form-group mb-4 mt-3">
+                        <label >اختار الصورة</label>
+                        <input type="file" name="image" class="form-control-file" id="image" required >
+
+                      
+                    </div>
+
+                    <div class="col-xl-12 mb-xl-0 mb-2">
+                        <label>الحالة</label>
+                        <select class="form-control form-control-lg" name="draft" id="draft">
+                            <option disabled>Large select</option>
+                            <option value="True">True</option>
+                            <option value="False">False</option>
+                            
+                        </select>
+                    </div>
+                    <div class="col-xl-12 mb-xl-0 mb-2">
+                        <label>الفئة</label>
+                        <select class="form-control form-control-lg" name="category" id="category">
+                            <option disabled>Large select</option>
+                            
+                            {% for item in category %}
+                            <option value="{{item.id}}">{{item}}</option>
+                            {% endfor %}
+                                
+                           
+                            
+                        </select>
+                    </div>
+                    
+
+                    <div class="modal-footer md-button">
+                        <button class="btn" data-dismiss="modal"><i class="flaticon-cancel-12"></i> تراجع</button>
+                        <button type="submit" class="btn btn-primary">تعديل المنشور</button>
+                    </div>
+
+                </form>
+            </div>
+         
+        </div>
+    </div>
+</div>
     
 {% endblock body %}
 
@@ -207,6 +295,32 @@
             var modal = $(this)
             modal.find('.modal-body #id').val(id);
             modal.find('.modal-body #title').val(title);
+            
+        
+        });
+</script>
+
+<script>
+    $('#edit-post').on('show.bs.modal', function(event) {
+            var button = $(event.relatedTarget)
+            
+            var id = button.data('id')
+            var title = button.data('title')
+            var content = button.data('content')
+            //var image = button.data('image')
+            var draft = button.data('draft')
+            var category = button.data('category')
+            
+           
+            
+            var modal = $(this)
+
+            modal.find('.modal-body #id').val(id);
+            modal.find('.modal-body #title').val(title);
+            modal.find('.modal-body #post_content').val(content);
+            //modal.find('.modal-body #image').val(image);
+            modal.find('.modal-body #draft').val(draft);
+            modal.find('.modal-body #category').val(category);
             
         
         });
